--- a/esercizi/pasts.html
+++ b/esercizi/pasts.html
@@ -49,6 +49,52 @@
         <span><sub>3</sub></span>
         <input type="text" id="5" />
         (get) angry.
+        <br />
+        <br />
+        3) I
+        <span><sub>1</sub></span>
+        <input type="text" id="6" />
+        (see) a car crash while I
+        <span><sub>2</sub></span>
+        <input type="text" id="7" />
+        (wait) for the taxi. Someone
+        <span><sub>3</sub></span>
+        <input type="text" id="8" />
+        (call) the First Aid, while someone else
+        <span><sub>4</sub></span>
+        <input type="text" id="9" />
+        (phone) to the police.
+        <br /><br />
+        4) It
+        <span><sub>1</sub></span>
+        <input type="text" id="10" />
+        (start) snowing while I
+        <span><sub>2</sub></span>
+        <input type="text" id="11" />
+        (drive) to work. Luckily it
+        <span><sub>3</sub></span>
+        <input type="text" id="12" />
+        (be) a light snow and I
+        <span><sub>4</sub></span>
+        <input type="text" id="13" />
+        (be able) to reach the office safe and sound.
+        <br /><br />
+        5) What
+        <span><sub>1</sub></span>
+        <input type="text" id="14" />
+        this time last year? - I
+        <span><sub>2</sub></span>
+        <input type="text" id="15" />
+        (ski) up in the mountains and I really
+        <span><sub>3</sub></span>
+        <input type="text" id="16" />
+        (enjoy) it!
+        <br /><br />
+        6) Where
+        <span><sub>1</sub></span>
+        <input type="text" id="17" />
+        (you go) yesterday?
+        <br /><br />
       </div>
       <br /><br />
       <div class="es2">
@@ -79,34 +125,45 @@
           <option value="3">it was beginning</option>
         </select>
         to rain. <br /><br />
-        3) My brother <select id="Es2">
+        3) My brother
+        <select id="Es2">
           <option value="1"></option>
           <option value="2">was watching Tv</option>
           <option value="3">watched Tv</option>
-        </select> while my sister<select id="Es2">
+        </select>
+        while my sister<select id="Es2">
           <option value="1"></option>
           <option value="2">was studying</option>
           <option value="3">studied</option>
-        </select> <br /> <br />
-        4) Where <select id="Es2">
+        </select>
+        <br />
+        <br />
+        4) Where
+        <select id="Es2">
           <option value="1"></option>
           <option value="2">did you buy</option>
           <option value="3">were you buying</option>
-        </select> this CD? - <select id="Es2">
+        </select>
+        this CD? -
+        <select id="Es2">
           <option value="1"></option>
-          <option value="2">I bought </option>
+          <option value="2">I bought</option>
           <option value="3">I was buying</option>
-        </select> it at Trony yesterday.
-        <br /> <br />
-        5) While my mum <select id="Es2">
+        </select>
+        it at Trony yesterday. <br />
+        <br />
+        5) While my mum
+        <select id="Es2">
           <option value="1"></option>
           <option value="2">cooked</option>
-          <option value="3">was cooking</option>
-        </select>, she <select id="Es2">
+          <option value="3">was cooking</option></select
+        >, she
+        <select id="Es2">
           <option value="1"></option>
           <option value="2">was receiving</option>
           <option value="3">received</option>
-        </select> a phone call from Meg.
+        </select>
+        a phone call from Meg.
       </div>
     </div>
   </body>
