--- a/esercizi/futures.html
+++ b/esercizi/futures.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,70 +26,164 @@
     ></script>
   </head>
   <body>
-    <h1>Present Simple / Present COntinuous / To be going to - Will</h1>
+    <h1>Present Simple / Present Continuous / To be going to - Will</h1>
     <div class="content border border-dark rounded">
       <div class="es1">
         <!--Sugli span si ricomincia, sull'esercizio (id) si continua-->
         1) In three weeks time my parents
         <span><sub>1</sub></span>
         <input type="text" id="1" />
-        (leave) for Paris, they have already bought the tickets and they 
+        (leave) for Paris, they have already bought the tickets and they
         <span><sub>2</sub></span>
         <input type="text" id="2" />
-        (stay)  in a 4 stars hotel. I am sure they
+        (stay) in a 4 stars hotel. I am sure they
         <span><sub>3</sub></span>
-        <input type="text" id="2" />
+        <input type="text" id="3" />
         (enjoy) themselves very much.
         <br /><br />
         2) Hurry up, the train
         <span><sub>1</sub></span>
-        <input type="text" id="3" />
-        (leave) from platform 2 and we 
-        <span><sub>2</sub></span>
         <input type="text" id="4" />
-        (miss)  it if do not run.
-        <br><br>
-        3) <span><sub>1</sub></span>
+        (leave) from platform 2 and we
+        <span><sub>2</sub></span>
         <input type="text" id="5" />
+        (miss) it if do not run.
+        <br /><br />
+        3) <span><sub>1</sub></span>
+        <input type="text" id="6" />
         (you take) the kids to school, please?
-        <br><br>
+        <br /><br />
         4) Look at your bad marks, if you do not study hard, you
         <span><sub>1</sub></span>
-        <input type="text" id="6" />
-        (not pass) the school year.
-        <br><br>
-        5) We 
-        <span><sub>1</sub></span>
         <input type="text" id="7" />
+        (not pass) the school year.
+        <br /><br />
+        5) We
+        <span><sub>1</sub></span>
+        <input type="text" id="8" />
         (fly) to Bahamas next month and the weather
         <span><sub>2</sub></span>
-        <input type="text" id="8" />
-        (be) sunny and hot.
-        <br><br>
-        6) <span><sub>1</sub></span>
         <input type="text" id="9" />
+        (be) sunny and hot.
+        <br /><br />
+        6) <span><sub>1</sub></span>
+        <input type="text" id="10" />
         (you do) the shopping for me, please?
-        <bR><br>
+        <br /><br />
         7) Look at the sky! there are many thick clouds…it
         <span><sub>1</sub></span>
-        <input type="text" id="10" />
+        <input type="text" id="11" />
         (rain) in a short time.
-        <br><br>
+        <br /><br />
         8) The concert
         <span><sub>1</sub></span>
-        <input type="text" id="11" />
+        <input type="text" id="12" />
         (start) at 8.00 p.m. and
         <span><sub>2</sub></span>
-        <input type="text" id="12" />
+        <input type="text" id="13" />
         (finish) at midnight.
-        <br><br>
-
-
+        <br /><br />
+        9) Who
+        <span><sub>1</sub></span>
+        <input type="text" id="14" />
+        (join) us at the party tonight? It
+        <span><sub>2</sub></span>
+        <input type="text" id="15" />
+        (be) great fun.
+        <br /><br />
+        10) What time
+        <span><sub>1</sub></span>
+        <input type="text" id="16" />
+        (the flight take off)?
+        <br /><br />
+        <button id="es1Submit">Verifica</button>
       </div>
       <br /><br />
       <div class="es2">
-        
+        <h1>IN EACH SENTENCE THERE IS A MISTAKE TO CORRECT</h1>
+        1) Next year my parents
+        <span><sub>1</sub></span>
+        <input type="text" id="17" placeholder="will celebrate" />
+        their wedding anniversary
+        <br /><br />
+        2) I'm not sure if they
+        <span><sub>2</sub></span>
+        <input type="text" id="18" placeholder="will come" />
+        <br /><br />
+        3) This piece of luggage is too heavy, the custom
+        <span><sub>3</sub></span>
+        <input type="text" id="19" placeholder="is contesting" it />
+        <br /><br />
+        4) Where
+        <span><sub>4</sub></span>
+        <input type="text" id="20" placeholder="do you go" />
+        tonight?
+        <br /><br />
+        5) Jane has already booked the flight. She
+        <span><sub>5</sub></span>
+        <input type="text" id="21" placeholder="is collecting" />
+        the flight ticket later at the travel agency!
+        <br /><br />
+        6) Which University
+        <span><sub>6</sub></span>
+        <input type="text" id="22" placeholder="are you attending" />
+        after High School?
+        <br /><br />
+        7) Maybe they
+        <span><sub>7</sub></span>
+        <input type="text" id="23" placeholder="are arriving" />
+        tomorrow
+        <br /><br />
+        8)
+        <span><sub>8</sub></span>
+        <input type="text" id="24" placeholder="Do you take" />
+        my kids to school, please?
+        <br /><br />
+        <button id="es2Submit">Verifica</button>
       </div>
     </div>
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.js"
+      integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $("#es1Submit").click(function () {
+        let nInput = 16;
+        let i = 0;
+        let k = 1;
+        console.log($("#" + k).val());
+        const soluzioni = [
+          "ARELEAVING",
+          "AREGOINGTOSTAY",
+          "WILLENJOY",
+          "ISLEAVING",
+          "AREGOINGTOMISS",
+          "WILLYOUTAKE",
+          "ARENOTGOINGTOPASS",
+          "AREFLYING",
+          "WILLBE",
+          "WILLYOUDO",
+          "ISGOINGTORAIN",
+          "STARTS",
+          "FINISHES",
+          "JOINING",
+          "ISGOINGTOBE",
+          "DOESTHEFLIGHTTAKEOFF",
+        ];
+        for (i = 0; i < nInput; i++) {
+          if (
+            $("#" + k)
+              .val()
+              .toUpperCase()
+              .replace(/\s/g, "") === soluzioni[i]
+          )
+            $("#" + k).css("background-color", "#3BCA9F");
+          else $("#" + k).css("background-color", "red");
+
+          k++;
+        }
+      });
+    </script>
   </body>
 </html>
