--- a/esercizi/futures.html
+++ b/esercizi/futures.html
@@ -96,11 +96,13 @@
         <input type="text" id="16" />
         (the flight take off)?
         <br /><br />
-        <button id="es1Submit">Verifica</button>
+        <button id="es1Submit" class="border border-2 border-dark rounded"><b>VERIFICA</b></button>
       </div>
-      <br /><br />
+    </div>
+    <br /><br />
+    <h1>IN EACH SENTENCE THERE IS A MISTAKE TO CORRECT</h1>
+    <div class="content border border-dark rounded">
       <div class="es2">
-        <h1>IN EACH SENTENCE THERE IS A MISTAKE TO CORRECT</h1>
         1) Next year my parents
         <span><sub>1</sub></span>
         <input type="text" id="17" placeholder="will celebrate" />
@@ -139,7 +141,7 @@
         <input type="text" id="24" placeholder="Do you take" />
         my kids to school, please?
         <br /><br />
-        <button id="es2Submit">Verifica</button>
+        <button id="es2Submit" class="border border-2 border-dark rounded"><b>VERIFICA<b></button>
       </div>
     </div>
     <script
@@ -149,11 +151,11 @@
     ></script>
     <script>
       $("#es1Submit").click(function () {
-        let nInput = 16;
+        let nInputes1 = 16;
         let i = 0;
-        let k = 1;
+        let k = 1; //id
         console.log($("#" + k).val());
-        const soluzioni = [
+        const soluzioniEs1 = [
           "ARELEAVING",
           "AREGOINGTOSTAY",
           "WILLENJOY",
@@ -171,12 +173,41 @@
           "ISGOINGTOBE",
           "DOESTHEFLIGHTTAKEOFF",
         ];
-        for (i = 0; i < nInput; i++) {
+        for (i = 0; i < nInputes1; i++) {
           if (
             $("#" + k)
               .val()
               .toUpperCase()
-              .replace(/\s/g, "") === soluzioni[i]
+              .replace(/\s/g, "") === soluzioniEs1[i]
+          )
+            $("#" + k).css("background-color", "#3BCA9F");
+          else $("#" + k).css("background-color", "red");
+
+          k++;
+        }
+      });
+
+      $("#es2Submit").click(function () {
+        let nInputes2 = 8;
+        let i = 0;
+        let k = 17; //id
+        console.log($("#" + k).val());
+        const soluzioniEs2 = [
+          "ARECELEBRATING",
+          "ARECOMING",
+          "ISGOINGTOCONTEST",
+          "AREYOUGOING",
+          "WILLCOLLECT",
+          "AREYOUGOINGTOATTEND",
+          "WILLARRIVE",
+          "WILLYOUTAKE",
+        ];
+        for (i = 0; i < nInputes2; i++) {
+          if (
+            $("#" + k)
+              .val()
+              .toUpperCase()
+              .replace(/\s/g, "") === soluzioniEs2[i]
           )
             $("#" + k).css("background-color", "#3BCA9F");
           else $("#" + k).css("background-color", "red");
