--- a/esercizi/pasts.html
+++ b/esercizi/pasts.html
@@ -6,100 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esercizi - Past Tenses</title>
     <link href="pasts.css" rel="stylesheet" />
-    <!--Bootstrap Js-->
+    <!--Bootstrap CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <!-- Bootstrap Js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"
-    ></script>
   </head>
 
   <body>
     <h1>Esercizi Past Simple / Past Continous</h1>
     <div class="content border border-dark rounded">
       <div class="es1">
-        <!--Sugli span si ricomincia, sull'esercizio (id) si continua-->
+        <h1>EX.1) Mix exercises</h1>
+        <br><br>
         1) While I
-        <span><sub>1</sub></span>
         <input type="text" id="1" />
         (wait) for my plane I
-        <span><sub>2</sub></span>
         <input type="text" id="2" />
         (send) some emails.
         <br /><br />
         2) Jack
-        <span><sub>1</sub></span>
         <input type="text" id="3" />
         (not/work) when his boss
-        <span><sub>2</sub></span>
         <input type="text" id="4" />
         (walk) in his office, so the boss
-        <span><sub>3</sub></span>
         <input type="text" id="5" />
         (get) angry.
         <br />
         <br />
         3) I
-        <span><sub>1</sub></span>
         <input type="text" id="6" />
         (see) a car crash while I
-        <span><sub>2</sub></span>
         <input type="text" id="7" />
         (wait) for the taxi. Someone
-        <span><sub>3</sub></span>
         <input type="text" id="8" />
         (call) the First Aid, while someone else
-        <span><sub>4</sub></span>
         <input type="text" id="9" />
         (phone) to the police.
         <br /><br />
         4) It
-        <span><sub>1</sub></span>
         <input type="text" id="10" />
         (start) snowing while I
-        <span><sub>2</sub></span>
         <input type="text" id="11" />
         (drive) to work. Luckily it
-        <span><sub>3</sub></span>
         <input type="text" id="12" />
         (be) a light snow and I
-        <span><sub>4</sub></span>
         <input type="text" id="13" />
         (be able) to reach the office safe and sound.
         <br /><br />
         5) What
-        <span><sub>1</sub></span>
         <input type="text" id="14" />
         this time last year? - I
-        <span><sub>2</sub></span>
         <input type="text" id="15" />
         (ski) up in the mountains and I really
-        <span><sub>3</sub></span>
         <input type="text" id="16" />
         (enjoy) it!
         <br /><br />
         6) Where
-        <span><sub>1</sub></span>
         <input type="text" id="17" />
         (you go) yesterday?
         <br /><br />
-        <button id="es1Submit">Verifica</button>
+        <button
+          type="button"
+          id="es2Submit"
+          class="border border-2 border-dark rounded"
+        >
+          <b>VERIFICA</b>
+        </button>
       </div>
-      <br /><br />
+    </div>
+    <br /><br />
+    <div class="content border border-dark rounded">
       <div class="es2">
-        <h2>SIMPLE PAST - PAST CONTINUOUS UNDERLINE THE CORRECT ANSWER</h2>
+        <h2>EX.2) SIMPLE PAST - PAST CONTINUOUS UNDERLINE THE CORRECT ANSWER</h2>
         1) Did
         <select id="Es2">
           <option value="1"></option>
@@ -165,11 +146,30 @@
           <option value="3">received</option>
         </select>
         a phone call from Meg.
+        <br /><br />
+        <button
+          type="button"
+          id="es2Submit"
+          class="border border-2 border-dark rounded"
+        >
+          <b>VERIFICA</b>
+        </button>
       </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.4.js"
       integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Bootstrap Js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
     <script>
@@ -179,22 +179,22 @@
         let k = 1; //id
         console.log($("#" + k).val());
         const soluzioniEs1 = [
-          "ARELEAVING",
-          "AREGOINGTOSTAY",
-          "WILLENJOY",
-          "ISLEAVING",
-          "AREGOINGTOMISS",
-          "WILLYOUTAKE",
-          "ARENOTGOINGTOPASS",
-          "AREFLYING",
-          "WILLBE",
-          "WILLYOUDO",
-          "ISGOINGTORAIN",
-          "STARTS",
-          "FINISHES",
-          "JOINING",
-          "ISGOINGTOBE",
-          "DOESTHEFLIGHTTAKEOFF",
+          "WASWASWAITING",
+          "WASNOTWORKING",
+          "WALKED",
+          "GOT",
+          "SAW",
+          "WASWAITING",
+          "CALLED",
+          "PHONED",
+          "STARTED",
+          "WASDRIVINIG",
+          "WAS",
+          "WASABLE",
+          "WEREYOUDOING",
+          "WASSKIING",
+          "ENJOYED",
+          "DIDYOUGO",
         ];
         for (i = 0; i < nInputes1; i++) {
           if (
