--- a/esercizi/futures.html
+++ b/esercizi/futures.html
@@ -6,77 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Esercizi - Futures</title>
     <link href="futu.css" rel="stylesheet" />
-    <!--Bootstrap Js-->
+    <!--Bootstrap CSS-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <!-- Bootstrap Js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
-    <h1>Present Simple / Present Continuous / To be going to - Will</h1>
+    <h1>
+      FUTURE EXERCISES: SIMPLE PRESENT- PRESENT CONTINUOUS- TO BE GOING TO- WILL
+    </h1>
     <div class="content border border-dark rounded">
       <div class="es1">
-        <!--Sugli span si ricomincia, sull'esercizio (id) si continua-->
+        <h2>
+          EX. 1 FUTURES : PRESENT SIMPLE, PRESENT CONTINUOUS, TO BE GOING TO-
+          WILL
+        </h2>
         1) In three weeks time my parents
-        <span><sub>1</sub></span>
         <input type="text" id="1" />
         (leave) for Paris, they have already bought the tickets and they
-        <span><sub>2</sub></span>
         <input type="text" id="2" />
         (stay) in a 4 stars hotel. I am sure they
-        <span><sub>3</sub></span>
         <input type="text" id="3" />
         (enjoy) themselves very much.
         <br /><br />
         2) Hurry up, the train
-        <span><sub>1</sub></span>
         <input type="text" id="4" />
         (leave) from platform 2 and we
-        <span><sub>2</sub></span>
         <input type="text" id="5" />
         (miss) it if do not run.
         <br /><br />
-        3) <span><sub>1</sub></span>
-        <input type="text" id="6" />
+        3) <input type="text" id="6" />
         (you take) the kids to school, please?
         <br /><br />
         4) Look at your bad marks, if you do not study hard, you
-        <span><sub>1</sub></span>
         <input type="text" id="7" />
         (not pass) the school year.
         <br /><br />
-        5) We
-        <span><sub>1</sub></span>
-        <input type="text" id="8" />
+        5) We <input type="text" id="8" />
         (fly) to Bahamas next month and the weather
-        <span><sub>2</sub></span>
         <input type="text" id="9" />
         (be) sunny and hot.
         <br /><br />
-        6) <span><sub>1</sub></span>
-        <input type="text" id="10" />
+        6) <input type="text" id="10" />
         (you do) the shopping for me, please?
         <br /><br />
         7) Look at the sky! there are many thick clouds…it
-        <span><sub>1</sub></span>
         <input type="text" id="11" />
         (rain) in a short time.
         <br /><br />
         8) The concert
-        <span><sub>1</sub></span>
         <input type="text" id="12" />
         (start) at 8.00 p.m. and
         <span><sub>2</sub></span>
@@ -84,69 +65,72 @@
         (finish) at midnight.
         <br /><br />
         9) Who
-        <span><sub>1</sub></span>
         <input type="text" id="14" />
         (join) us at the party tonight? It
-        <span><sub>2</sub></span>
         <input type="text" id="15" />
         (be) great fun.
         <br /><br />
         10) What time
-        <span><sub>1</sub></span>
         <input type="text" id="16" />
         (the flight take off)?
         <br /><br />
-        <button id="es1Submit" class="border border-2 border-dark rounded"><b>VERIFICA</b></button>
+        <button id="es1Submit" class="border border-2 border-dark rounded">
+          <b>VERIFICA</b>
+        </button>
       </div>
     </div>
     <br /><br />
-    <h1>IN EACH SENTENCE THERE IS A MISTAKE TO CORRECT</h1>
+
     <div class="content border border-dark rounded">
       <div class="es2">
+        <h2>
+          EX.2: IN EACH SENTENCE THERE IS A MISTAKE TO CORRECT. REWRITE THE
+          RIGHT TENSE ONLY
+        </h2>
         1) Next year my parents
-        <span><sub>1</sub></span>
         <input type="text" id="17" placeholder="will celebrate" />
         their wedding anniversary
         <br /><br />
         2) I'm not sure if they
-        <span><sub>2</sub></span>
         <input type="text" id="18" placeholder="will come" />
         <br /><br />
         3) This piece of luggage is too heavy, the custom
-        <span><sub>3</sub></span>
         <input type="text" id="19" placeholder="is contesting" it />
         <br /><br />
         4) Where
-        <span><sub>4</sub></span>
         <input type="text" id="20" placeholder="do you go" />
         tonight?
         <br /><br />
         5) Jane has already booked the flight. She
-        <span><sub>5</sub></span>
         <input type="text" id="21" placeholder="is collecting" />
         the flight ticket later at the travel agency!
         <br /><br />
         6) Which University
-        <span><sub>6</sub></span>
         <input type="text" id="22" placeholder="are you attending" />
         after High School?
         <br /><br />
         7) Maybe they
-        <span><sub>7</sub></span>
         <input type="text" id="23" placeholder="are arriving" />
         tomorrow
         <br /><br />
         8)
-        <span><sub>8</sub></span>
         <input type="text" id="24" placeholder="Do you take" />
         my kids to school, please?
         <br /><br />
-        <button id="es2Submit" class="border border-2 border-dark rounded"><b>VERIFICA<b></button>
+        <button id="es2Submit" class="border border-2 border-dark rounded">
+          <b>VERIFICA</b>
+        </button>
       </div>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.4.js"
       integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Bootstrap Js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
     <script>
