--- a/esercizi/futur.cont.html
+++ b/esercizi/futur.cont.html
@@ -26,43 +26,43 @@
           continuous, future perfect, and future perfect continuous tense.
         </h2>
         1) By this time tomorrow, I
-        <select id="Es1">
-          <option value="1"></option>
-          <option value="2">will be working</option>
-          <option value="3">will have been working</option>
-          <option value="4">will have worked</option>
+        <select id="e1n1">
+          <option value=""></option>
+          <option value="0">will be working</option>
+          <option value="1">will have been working</option>
+          <option value="0">will have worked</option>
         </select>
         for 10 hours. <br /><br />
         2) She
-        <select id="Es1">
-          <option value="1"></option>
-          <option value="2">will be running</option>
-          <option value="3">will have been running</option>
-          <option value="4">will have run</option>
+        <select id="e1n2">
+          <option value=""></option>
+          <option value="1">will be running</option>
+          <option value="0">will have been running</option>
+          <option value="0">will have run</option>
         </select>
         a maraton next week. <br /><br />
         3) They
-        <select id="Es1">
-          <option value="1"></option>
-          <option value="2">will be completing</option>
-          <option value="3">will have been completing</option>
-          <option value="4">will have completed</option>
+        <select id="e1n3">
+          <option value=""></option>
+          <option value="0">will be completing</option>
+          <option value="0">will have been completing</option>
+          <option value="1">will have completed</option>
         </select>
         the project by the end of the month.<br /><br />
         4) At 6 p.m. tonight, I
-        <select id="Es1">
-          <option value="1"></option>
-          <option value="2">will be cooking</option>
-          <option value="3">will have been cooking</option>
-          <option value="4">will have cooked</option>
+        <select id="e1n4">
+          <option value=""></option>
+          <option value="1">will be cooking</option>
+          <option value="0">will have been cooking</option>
+          <option value="0">will have cooked</option>
         </select>
         dinner. <br /><br />
         5) By the time he arrives, we
-        <select id="Es1">
-          <option value="1"></option>
-          <option value="2">will be hanging</option>
-          <option value="3">will have been hanging</option>
-          <option value="4">will have hung</option>
+        <select id="e1n5">
+          <option value=""></option>
+          <option value="0">will be hanging</option>
+          <option value="1">will have been hanging</option>
+          <option value="0">will have hung</option>
         </select>
         the decorations.<br /><br />
         <button id="es1Submit" class="border border-2 border-dark rounded">
@@ -75,39 +75,47 @@
     <div class="content border border-dark rounded">
       <div class="es2">
         <h2>
-          EX. 2 Rewrite the following sentences using the future continuous, 
+          EX. 2 Rewrite the following sentences using the future continuous,
           future perfect, or future perfect continuous tense.
         </h2>
-        1) By the time we arrive, the party (start) 
-        <input type="text" id="17" placeholder="will celebrate" />
+        1) By the time we arrive, the party (start)
+        <input type="text" id="1" />
         <br /><br />
         2) I (study)
-        <input type="text" id="18" placeholder="will come" />
+        <input type="text" id="2" />
         for three hours by the time you come over.
         <br /><br />
         3) They (play)
-        <input type="text" id="19" placeholder="is contesting" it />
+        <input type="text" id="3" />
         tennis all afternoon tomorrow.
         <br /><br />
-        4) She (sleep) 
-        <input type="text" id="20" placeholder="do you go" />
+        4) She (sleep)
+        <input type="text" id="4" />
         for ten hours when her alarm goes off.
         <br /><br />
         5) We (travel)
-        <input type="text" id="21" placeholder="is collecting" />
+        <input type="text" id="5" />
         for 12 hours by the time we reach our destination.
         <br /><br />
         6) By next year, he (live)
-        <input type="text" id="22" placeholder="are you attending" />
+        <input type="text" id="6" />
         in this city for five years.
         <br /><br />
-        7) Maybe they
-        <input type="text" id="23" placeholder="are arriving" />
-        tomorrow
+        7) I (work)
+        <input type="text" id="7" />
+        on this project until late tonight.
         <br /><br />
-        8)
-        <input type="text" id="24" placeholder="Do you take" />
-        my kids to school, please?
+        8) They (wait)
+        <input type="text" id="8" />
+        for two hours when the bus finally arrives.
+        <br /><br />
+        9) He (practice)
+        <input type="text" id="9" />
+        the piano for five years next month.
+        <br /><br />
+        10) By the time I finish this book, I (read)
+        <input type="text" id="10" />
+        three novels this month.
         <br /><br />
         <button id="es2Submit" class="border border-2 border-dark rounded">
           <b>VERIFICA</b>
@@ -128,15 +136,32 @@
     <script>
       $("#es1Submit").click(function () {
         let nInputes2 = 5;
+        let i = 1;
+        for (i = 1; i <= nInputes2; i++) {
+          if ($("#e1n" + i).val() == "1")
+            $("#e1n" + i).css("background-color", "#3BCA9F");
+          else if ($("#e1n" + i).val() == "0")
+            $("#e1n" + i).css("background-color", "red");
+          else $("#e1n" + i).css("background-color", "red");
+        }
+      });
+
+      $("#es2Submit").click(function () {
+        let nInputes2 = 10;
         let i = 0;
-        let k = 17;
+        let k = 1; //id
         console.log($("#" + k).val());
         const soluzioniEs2 = [
-          "WILLHAVEBEENWORKIG",
-          "WILLBERUNING",
-          "WILLHAVECOMPLETED",
-          "WILLBECOOKING",
-          "WILLHAVEBEENHANGING",
+          "BYTHETIMEWEARRIVETHEPARTYWILLBESTARTING.",
+          "IWILLHAVEBEENSTUDYINGFORTHREEHOURSBYTHETIMEYOUCOMEOVER",
+          "THEYWILLBEPLAYINGTENNISALLAFTERNOONTOMORROW",
+          "SHEWILLHAVEBEENSLEEPINGFORTENHOURSWHENHERALARMGOESOFF",
+          "WEWILLHAVEBEENTRAVELINGFOR12HOURSBYTHETIMEWEREACHOURDESTINATION",
+          "BYNEXTYEAR,HEWILLHAVEBEENLIVINGINTHISCITYFORFIVEYEARS",
+          "IWILLBEWORKINGONTHISPROJECTUNTILLATETONIGHT",
+          "THEYWILLHAVEBEENWAITINGFORTWOHOURSWHENTHEBUSFINALLYARRIVES",
+          "HEWILLHAVEBEENPRATICINGTHEPIANOFORFIVEYEARSNEXTMOUNTHS",
+          "BYTHETIMEIFINISHTHISBOOK,IWILLHAVEREADTHREENOVELSTHISMOUNTH",
         ];
         for (i = 0; i < nInputes2; i++) {
           if (
