--- a/esercizi/pasts.html
+++ b/esercizi/pasts.html
@@ -19,8 +19,8 @@
     <h1>Esercizi Past Simple / Past Continous</h1>
     <div class="content border border-dark rounded">
       <div class="es1">
-        <h1>EX.1) Mix exercises</h1>
-        <br><br>
+        <h2>EX.1) SIMPLE PAST - PAST CONTINUOUS</h2>
+        <br />
         1) While I
         <input type="text" id="1" />
         (wait) for my plane I
@@ -70,7 +70,7 @@
         <br /><br />
         <button
           type="button"
-          id="es2Submit"
+          id="es1Submit"
           class="border border-2 border-dark rounded"
         >
           <b>VERIFICA</b>
@@ -80,70 +80,74 @@
     <br /><br />
     <div class="content border border-dark rounded">
       <div class="es2">
-        <h2>EX.2) SIMPLE PAST - PAST CONTINUOUS UNDERLINE THE CORRECT ANSWER</h2>
+        <h2>
+          EX.2) SIMPLE PAST - PAST CONTINUOUS UNDERLINE THE CORRECT ANSWER
+        </h2>
+        <br />
         1) Did
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">did you do</option>
-          <option value="3">were you doing</option>
+        <select id="e2n1">
+          <option value="">Choose an option</option>
+          <option value="0">did you do</option>
+          <option value="1">were you doing</option>
         </select>
-        yesterday when
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">i called</option>
-          <option value="3">was calling</option>
+        yesterday when i
+        <select id="e2n2">
+          <option value="">Choose an option</option>
+          <option value="1">called</option>
+          <option value="0">was calling</option>
         </select>
         you? <br /><br />
         2) The kids
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">played</option>
-          <option value="3">were playing</option>
+        <select id="e2n3">
+          <option value="">Choose an option</option>
+          <option value="0">played</option>
+          <option value="1">were playing</option>
         </select>
         footbal when
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">it began</option>
-          <option value="3">it was beginning</option>
+        <select id="e2n4">
+          <option value="">Choose an option</option>
+          <option value="1">it began</option>
+          <option value="0">it was beginning</option>
         </select>
         to rain. <br /><br />
         3) My brother
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">was watching Tv</option>
-          <option value="3">watched Tv</option>
+        <select id="e2n5">
+          <option value="">Choose an option</option>
+          <option value="1">was watching Tv</option>
+          <option value="0">watched Tv</option>
         </select>
-        while my sister<select id="Es2">
-          <option value="1"></option>
-          <option value="2">was studying</option>
-          <option value="3">studied</option>
+        while my sister
+        <select id="e2n6">
+          <option value="">Choose an option</option>
+          <option value="1">was studying</option>
+          <option value="0">studied</option>
         </select>
         <br />
         <br />
         4) Where
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">did you buy</option>
-          <option value="3">were you buying</option>
+        <select id="e2n7">
+          <option value="">Choose an option</option>
+          <option value="1">did you buy</option>
+          <option value="0">were you buying</option>
         </select>
         this CD? -
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">I bought</option>
-          <option value="3">I was buying</option>
+        <select id="e2n8">
+          <option value="">Choose an option</option>
+          <option value="1">I bought</option>
+          <option value="0">I was buying</option>
         </select>
         it at Trony yesterday. <br />
         <br />
         5) While my mum
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">cooked</option>
-          <option value="3">was cooking</option></select
+        <select id="e2n9">
+          <option value="">Choose an option</option>
+          <option value="0">cooked</option>
+          <option value="1">was cooking</option></select
         >, she
-        <select id="Es2">
-          <option value="1"></option>
-          <option value="2">was receiving</option>
-          <option value="3">received</option>
+        <select id="e2n10">
+          <option value="">Choose an option</option>
+          <option value="0">was receiving</option>
+          <option value="1">received</option>
         </select>
         a phone call from Meg.
         <br /><br />
@@ -179,7 +183,7 @@
         let k = 1; //id
         console.log($("#" + k).val());
         const soluzioniEs1 = [
-          "WASWASWAITING",
+          "WASWAITING",
           "WASNOTWORKING",
           "WALKED",
           "GOT",
@@ -211,31 +215,17 @@
       });
 
       $("#es2Submit").click(function () {
-        let nInputes2 = 8;
-        let i = 0;
-        let k = 17;
-        console.log($("#" + k).val());
-        const soluzioniEs2 = [
-          "ARECELEBRATING",
-          "ARECOMING",
-          "ISGOINGTOCONTEST",
-          "AREYOUGOING",
-          "WILLCOLLECT",
-          "AREYOUGOINGTOATTEND",
-          "WILLARRIVE",
-          "WILLYOUTAKE",
-        ];
-        for (i = 0; i < nInputes2; i++) {
-          if (
-            $("#" + k)
-              .val()
-              .toUpperCase()
-              .replace(/\s/g, "") === soluzioniEs2[i]
-          )
-            $("#" + k).css("background-color", "#3BCA9F");
-          else $("#" + k).css("background-color", "red");
-
-          k++;
+        let nInputes2 = 10;
+        let i = 1;
+        let cont_err = 0,
+          cont_corr = 0,
+          cont_vuoto = 0;
+        for (i = 1; i <= nInputes2; i++) {
+          if ($("#e2n" + i).val() == "1")
+            $("#e2n" + i).css("background-color", "#3BCA9F");
+          else if ($("#e2n" + i).val() == "0")
+            $("#e2n" + i).css("background-color", "red");
+          else $("#e2n" + i).css("background-color", "red");
         }
       });
     </script>
