--- a/esercizi/futur.cont.html
+++ b/esercizi/futur.cont.html
@@ -26,7 +26,7 @@
           continuous, future perfect, and future perfect continuous tense.
         </h2>
         1) By this time tomorrow, I
-        <select id="e1n1">
+        <select id="e1n1" class="rounded">
           <option value=""></option>
           <option value="0">will be working</option>
           <option value="1">will have been working</option>
@@ -34,7 +34,7 @@
         </select>
         for 10 hours. <br /><br />
         2) She
-        <select id="e1n2">
+        <select id="e1n2" class="rounded">
           <option value=""></option>
           <option value="1">will be running</option>
           <option value="0">will have been running</option>
@@ -42,7 +42,7 @@
         </select>
         a maraton next week. <br /><br />
         3) They
-        <select id="e1n3">
+        <select id="e1n3" class="rounded">
           <option value=""></option>
           <option value="0">will be completing</option>
           <option value="0">will have been completing</option>
@@ -50,7 +50,7 @@
         </select>
         the project by the end of the month.<br /><br />
         4) At 6 p.m. tonight, I
-        <select id="e1n4">
+        <select id="e1n4" class="rounded">
           <option value=""></option>
           <option value="1">will be cooking</option>
           <option value="0">will have been cooking</option>
@@ -58,7 +58,7 @@
         </select>
         dinner. <br /><br />
         5) By the time he arrives, we
-        <select id="e1n5">
+        <select id="e1n5" class="rounded">
           <option value=""></option>
           <option value="0">will be hanging</option>
           <option value="1">will have been hanging</option>
@@ -79,42 +79,42 @@
           future perfect, or future perfect continuous tense.
         </h2>
         1) By the time we arrive, the party (start)
-        <input type="text" id="1" />
+        <input type="text" id="1" class="rounded" />
         <br /><br />
         2) I (study)
-        <input type="text" id="2" />
+        <input type="text" id="2" class="rounded" />
         for three hours by the time you come over.
         <br /><br />
         3) They (play)
-        <input type="text" id="3" />
+        <input type="text" id="3" class="rounded" />
         tennis all afternoon tomorrow.
         <br /><br />
         4) She (sleep)
-        <input type="text" id="4" />
+        <input type="text" id="4" class="rounded" />
         for ten hours when her alarm goes off.
         <br /><br />
         5) We (travel)
-        <input type="text" id="5" />
+        <input type="text" id="5" class="rounded" />
         for 12 hours by the time we reach our destination.
         <br /><br />
         6) By next year, he (live)
-        <input type="text" id="6" />
+        <input type="text" id="6" class="rounded" />
         in this city for five years.
         <br /><br />
         7) I (work)
-        <input type="text" id="7" />
+        <input type="text" id="7" class="rounded" />
         on this project until late tonight.
         <br /><br />
         8) They (wait)
-        <input type="text" id="8" />
+        <input type="text" id="8" class="rounded" />
         for two hours when the bus finally arrives.
         <br /><br />
         9) He (practice)
-        <input type="text" id="9" />
+        <input type="text" id="9" class="rounded" />
         the piano for five years next month.
         <br /><br />
         10) By the time I finish this book, I (read)
-        <input type="text" id="10" />
+        <input type="text" id="10" class="rounded" />
         three novels this month.
         <br /><br />
         <button id="es2Submit" class="border border-2 border-dark rounded">
