--- a/esercizi/futures.html
+++ b/esercizi/futures.html
@@ -25,53 +25,53 @@
           WILL
         </h2>
         1) In three weeks time my parents
-        <input type="text" id="1" />
+        <input type="text" id="1" class="rounded" />
         (leave) for Paris, they have already bought the tickets and they
-        <input type="text" id="2" />
+        <input type="text" id="2" class="rounded" />
         (stay) in a 4 stars hotel. I am sure they
-        <input type="text" id="3" />
+        <input type="text" id="3" class="rounded" />
         (enjoy) themselves very much.
         <br /><br />
         2) Hurry up, the train
-        <input type="text" id="4" />
+        <input type="text" id="4" class="rounded" />
         (leave) from platform 2 and we
-        <input type="text" id="5" />
+        <input type="text" id="5" class="rounded" />
         (miss) it if do not run.
         <br /><br />
-        3) <input type="text" id="6" />
+        3) <input type="text" id="6" class="rounded" />
         (you take) the kids to school, please?
         <br /><br />
         4) Look at your bad marks, if you do not study hard, you
-        <input type="text" id="7" />
+        <input type="text" id="7" class="rounded" />
         (not pass) the school year.
         <br /><br />
-        5) We <input type="text" id="8" />
+        5) We <input type="text" id="8" class="rounded" />
         (fly) to Bahamas next month and the weather
-        <input type="text" id="9" />
+        <input type="text" id="9" class="rounded" />
         (be) sunny and hot.
         <br /><br />
-        6) <input type="text" id="10" />
+        6) <input type="text" id="10" class="rounded" />
         (you do) the shopping for me, please?
         <br /><br />
         7) Look at the sky! there are many thick clouds…it
-        <input type="text" id="11" />
+        <input type="text" id="11" class="rounded" />
         (rain) in a short time.
         <br /><br />
         8) The concert
-        <input type="text" id="12" />
+        <input type="text" id="12" class="rounded" />
         (start) at 8.00 p.m. and
         <span><sub>2</sub></span>
-        <input type="text" id="13" />
+        <input type="text" id="13" class="rounded" />
         (finish) at midnight.
         <br /><br />
         9) Who
-        <input type="text" id="14" />
+        <input type="text" id="14" class="rounded" />
         (join) us at the party tonight? It
-        <input type="text" id="15" />
+        <input type="text" id="15" class="rounded" />
         (be) great fun.
         <br /><br />
         10) What time
-        <input type="text" id="16" />
+        <input type="text" id="16" class="rounded" />
         (the flight take off)?
         <br /><br />
         <button id="es1Submit" class="border border-2 border-dark rounded">
@@ -88,33 +88,53 @@
           RIGHT TENSE ONLY
         </h2>
         1) Next year my parents
-        <input type="text" id="17" placeholder="will celebrate" />
+        <input
+          type="text"
+          id="17"
+          placeholder="will celebrate"
+          class="rounded"
+        />
         their wedding anniversary
         <br /><br />
         2) I'm not sure if they
-        <input type="text" id="18" placeholder="will come" />
+        <input type="text" id="18" placeholder="will come" class="rounded" />
         <br /><br />
         3) This piece of luggage is too heavy, the custom
-        <input type="text" id="19" placeholder="is contesting" it />
+        <input
+          type="text"
+          id="19"
+          placeholder="is contesting"
+          class="rounded"
+        />
         <br /><br />
         4) Where
-        <input type="text" id="20" placeholder="do you go" />
+        <input type="text" id="20" placeholder="do you go" class="rounded" />
         tonight?
         <br /><br />
         5) Jane has already booked the flight. She
-        <input type="text" id="21" placeholder="is collecting" />
+        <input
+          type="text"
+          id="21"
+          placeholder="is collecting"
+          class="rounded"
+        />
         the flight ticket later at the travel agency!
         <br /><br />
         6) Which University
-        <input type="text" id="22" placeholder="are you attending" />
+        <input
+          type="text"
+          id="22"
+          placeholder="are you attending"
+          class="rounded"
+        />
         after High School?
         <br /><br />
         7) Maybe they
-        <input type="text" id="23" placeholder="are arriving" />
+        <input type="text" id="23" placeholder="are arriving" class="rounded" />
         tomorrow
         <br /><br />
         8)
-        <input type="text" id="24" placeholder="Do you take" />
+        <input type="text" id="24" placeholder="Do you take" class="rounded" />
         my kids to school, please?
         <br /><br />
         <button id="es2Submit" class="border border-2 border-dark rounded">
