--- a/esercizi/pasts.html
+++ b/esercizi/pasts.html
@@ -22,50 +22,50 @@
         <h2>EX.1) SIMPLE PAST - PAST CONTINUOUS</h2>
         <br />
         1) While I
-        <input type="text" id="1" />
+        <input type="text" id="1" class="rounded" />
         (wait) for my plane I
-        <input type="text" id="2" />
+        <input type="text" id="2" class="rounded" />
         (send) some emails.
         <br /><br />
         2) Jack
-        <input type="text" id="3" />
+        <input type="text" id="3" class="rounded" />
         (not/work) when his boss
-        <input type="text" id="4" />
+        <input type="text" id="4" class="rounded" />
         (walk) in his office, so the boss
-        <input type="text" id="5" />
+        <input type="text" id="5" class="rounded" />
         (get) angry.
         <br />
         <br />
         3) I
-        <input type="text" id="6" />
+        <input type="text" id="6" class="rounded" />
         (see) a car crash while I
-        <input type="text" id="7" />
+        <input type="text" id="7" class="rounded" />
         (wait) for the taxi. Someone
-        <input type="text" id="8" />
+        <input type="text" id="8" class="rounded" />
         (call) the First Aid, while someone else
-        <input type="text" id="9" />
+        <input type="text" id="9" class="rounded" />
         (phone) to the police.
         <br /><br />
         4) It
-        <input type="text" id="10" />
+        <input type="text" id="10" class="rounded" />
         (start) snowing while I
-        <input type="text" id="11" />
+        <input type="text" id="11" class="rounded" />
         (drive) to work. Luckily it
-        <input type="text" id="12" />
+        <input type="text" id="12" class="rounded" />
         (be) a light snow and I
-        <input type="text" id="13" />
+        <input type="text" id="13" class="rounded" />
         (be able) to reach the office safe and sound.
         <br /><br />
         5) What
-        <input type="text" id="14" />
+        <input type="text" id="14" class="rounded" />
         this time last year? - I
-        <input type="text" id="15" />
+        <input type="text" id="15" class="rounded" />
         (ski) up in the mountains and I really
-        <input type="text" id="16" />
+        <input type="text" id="16" class="rounded" />
         (enjoy) it!
         <br /><br />
         6) Where
-        <input type="text" id="17" />
+        <input type="text" id="17" class="rounded" />
         (you go) yesterday?
         <br /><br />
         <button
@@ -85,39 +85,39 @@
         </h2>
         <br />
         1) Did
-        <select id="e2n1">
+        <select id="e2n1" class="rounded">
           <option value="">Choose an option</option>
           <option value="0">did you do</option>
           <option value="1">were you doing</option>
         </select>
         yesterday when i
-        <select id="e2n2">
+        <select id="e2n2" class="rounded">
           <option value="">Choose an option</option>
           <option value="1">called</option>
           <option value="0">was calling</option>
         </select>
         you? <br /><br />
         2) The kids
-        <select id="e2n3">
+        <select id="e2n3" class="rounded">
           <option value="">Choose an option</option>
           <option value="0">played</option>
           <option value="1">were playing</option>
         </select>
         footbal when
-        <select id="e2n4">
+        <select id="e2n4" class="rounded">
           <option value="">Choose an option</option>
           <option value="1">it began</option>
           <option value="0">it was beginning</option>
         </select>
         to rain. <br /><br />
         3) My brother
-        <select id="e2n5">
+        <select id="e2n5" class="rounded">
           <option value="">Choose an option</option>
           <option value="1">was watching Tv</option>
           <option value="0">watched Tv</option>
         </select>
         while my sister
-        <select id="e2n6">
+        <select id="e2n6" class="rounded">
           <option value="">Choose an option</option>
           <option value="1">was studying</option>
           <option value="0">studied</option>
@@ -125,13 +125,13 @@
         <br />
         <br />
         4) Where
-        <select id="e2n7">
+        <select id="e2n7" class="rounded">
           <option value="">Choose an option</option>
           <option value="1">did you buy</option>
           <option value="0">were you buying</option>
         </select>
         this CD? -
-        <select id="e2n8">
+        <select id="e2n8" class="rounded">
           <option value="">Choose an option</option>
           <option value="1">I bought</option>
           <option value="0">I was buying</option>
@@ -139,12 +139,12 @@
         it at Trony yesterday. <br />
         <br />
         5) While my mum
-        <select id="e2n9">
+        <select id="e2n9" class="rounded">
           <option value="">Choose an option</option>
           <option value="0">cooked</option>
           <option value="1">was cooking</option></select
         >, she
-        <select id="e2n10">
+        <select id="e2n10" class="rounded">
           <option value="">Choose an option</option>
           <option value="0">was receiving</option>
           <option value="1">received</option>
